lista_3/test/sol.txt
2 3 4 5 - * + 
= 1234576
2 100 ^ 
= 295422
2 3 - 2 - 
= 1234574
269164 123456 / 
= 567890
1234575 1234576 - 
= 1234576
1 653599 / 
= 123456
1233666 
= 1233666
10 
= 10
Error: błąd składniowy
2 123 ^ 
= 594706
2 1234574 ^ 
= 925933
2 1234575 ^ 2 1 ^ * 
= 1
2 1234574 ^ 2 2 ^ * 
= 1
17 18 * ~ 
= 1234271
2 1234575 ^ 2 * 
= 1
2 1228015 ^ 
= 185209
Error: błąd składniowy
Error: 0 nie jest odwracalne modulo 1234577
Error: 2 nie jest odwracalne modulo 1234576
2 823051 ^ 3 ^ 
= 2
